--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><title>Findemarkt24</title></head><body><div id='root'></div></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Findemarkt24</title>
+</head>
+<body>
+  <h1>Findemarkt24 Client</h1>
+  <p>Bu sadece bir ön izleme sürümüdür.</p>
+  <script src="app.js"></script>
+</body>
+</html>
