--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Findemarkt24</title>
-</head>
-<body>
-  <h1>Findemarkt24 Client</h1>
-  <p>Bu sadece bir ön izleme sürümüdür.</p>
-  <script src="app.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Findemarkt24</title></head><body><h1>Welcome to Findemarkt24</h1></body></html>
