--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!DOCTYPE html><html><head><title>Findemarkt24</title></head><body><h1>Welcome to Findemarkt24</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head><title>Findemarkt24</title></head>
+<body>
+<h1>Findemarkt24 Uygulaması Yayında</h1>
+</body>
+</html>
