--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+
 <!DOCTYPE html>
-<html>
-<head><title>Findemarkt24</title></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Findemarkt24</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="app.js"></script>
+</head>
 <body>
-<h1>Findemarkt24 Uygulaması Yayında</h1>
+    <h1>Findemarkt24 Uygulaması</h1>
+    <p>Hoş geldiniz!</p>
 </body>
 </html>
