--- a/login.html
+++ b/login.html
@@ -1,64 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>Findemarkt24 - Anmeldung</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f3f4f6;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 100px;
-    }
-    h1 {
-      color: #1f2937;
-    }
-    .form-container {
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 300px;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .register {
-      margin-top: 20px;
-      text-align: center;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Findemarkt24 – Anmelden</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Findemarkt24</h1>
-  <div class="form-container">
+  <div class="login-container">
+    <h1>Findemarkt24</h1>
     <form>
-      <label for="email">E-Mail</label>
-      <input type="email" id="email" placeholder="E-Mail eingeben" required />
-      <label for="password">Passwort</label>
-      <input type="password" id="password" placeholder="Passwort eingeben" required />
+      <input type="email" placeholder="E-Mail" required />
+      <input type="password" placeholder="Passwort" required />
       <button type="submit">Anmelden</button>
+      <p><a href="#">Passwort vergessen?</a></p>
+      <hr/>
+      <button class="google">Mit Google anmelden</button>
+      <p>Noch keinen Account? <a href="#">Registrieren</a></p>
     </form>
-    <div class="register">
-      <p>Noch kein Konto? <a href="#">Registrieren</a></p>
-    </div>
   </div>
 </body>
 </html>
