--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Findemarkt24 - Startseite</title>
+    <title>Anzeige Details</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,14 +14,11 @@
         </nav>
     </header>
     <main>
-        <h2>Neueste Anzeigen</h2>
-        <div class="ad-list">
-            <a href="detail.html" class="ad">
-                <p>3-Zimmer-Wohnung in Berlin - 1.200 €</p>
-            </a>
-            <a href="detail.html" class="ad">
-                <p>VW Passat 2016 TDI - 14.500 €</p>
-            </a>
+        <div class="listing">
+            <h2>3-Zimmer-Wohnung in zentraler Lage</h2>
+            <p><strong>Preis:</strong> 1.200 €</p>
+            <p><strong>Ort:</strong> Berlin</p>
+            <p><strong>Beschreibung:</strong> Helle Wohnung mit Balkon, ruhige Lage, sofort bezugsfrei.</p>
         </div>
     </main>
 </body>
