--- a/kategorien.html
+++ b/kategorien.html
@@ -2,28 +2,22 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kategorien - Findemarkt24</title>
+    <title>Kategorien</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Kategorien</h1>
         <nav>
-            <button onclick="location.href='index.html'">Zurück</button>
+            <a href="index.html">Zurück</a>
         </nav>
     </header>
     <main>
         <ul>
-            <li>Immobilien</li>
-            <li>Fahrzeuge</li>
-            <li>Ersatzteile & Zubehör</li>
-            <li>Elektronik</li>
-            <li>Haushalt & Garten</li>
-            <li>Freizeit & Hobby</li>
-            <li>Dienstleistungen</li>
-            <li>Jobs</li>
-            <li>Haustiere</li>
+            <li><a href="detail.html">Immobilien</a></li>
+            <li><a href="detail.html">Fahrzeuge</a></li>
+            <li><a href="detail.html">Elektronik</a></li>
+            <li><a href="detail.html">Jobs</a></li>
         </ul>
     </main>
 </body>
